updated and fixed the darkmode so that it stays dark mode on other pages

--- a/src/Pages/fake/fake.css
+++ b/src/Pages/fake/fake.css
@@ -1,13 +1,12 @@
-.container2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+
+  .horror{
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
   }
-  
   .media {
-    width: 50%;
-    height: 50%;
+    padding-top: 50px;
+    width: 100%;
+    height: 100%;
     position: relative;
   }
   
