--- a/src/Stylesheets/Darkmode.css
+++ b/src/Stylesheets/Darkmode.css
@@ -1,7 +1,6 @@
 .dark-mode {
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
-  transition: 1s;
 }
 
 
